@@ -1,3 +1,12 @@
+2002-10-15  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* unix/configure:
+	* unix/tcl.m4: add AIX-5 ppc build support. Remove unused
+	SC_ENABLE_MEMDEBUG.
+
+	* win/configure:
+	* win/tcl.m4: Add --enable-shared=mem support.
+
 2002-10-10  Peter Spjuth  <peter.spjuth@space.se>
 
 	* tests/grid.test:
